Got homepage redirect to about

--- a/flaskr/templates/about/about.html
+++ b/flaskr/templates/about/about.html
@@ -3,9 +3,9 @@
 {% block title %}About{% endblock %}
 
 {% block header %}
-  <h2>About [Person's Name]</h2>
+  <h2>About Gordon</h2>
 {% endblock %}
 
 {% block content %}
-  <p>[Person's Name] is a notable figure in...</p>
+  {% include 'about/about_paragraph.html' %}
 {% endblock %}
