--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -2,7 +2,7 @@
 <title>{% block title %}{% endblock %} - Gordon Rishon</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <nav>
-  <h1>Biography of [Person's Name]</h1>
+  <h1>Biography of Gordon</h1>
   <ul>
   <li><a href="{{ url_for('routes.about') }}">About</a></li>
   <li><a href="{{ url_for('routes.biography') }}">Biography</a></li>
